Address PR review comments
- Use .toList() instead of .collect(Collectors.toList()) in DeathListener and CommandHandler for consistency
- Remove unused Collectors import from CommandHandler
- Remove DEFAULT_CYCLE_NUMBER constant - use literal 1 directly
- Remove INVALID_TASK_ID constant - use literal -1 directly (conventional Bukkit sentinel value)
- Rename TITLE_FADE_IN_MS to TITLE_FADE_IN_MILLIS for naming consistency
- Fix null check and formatting in CommandHandler status command
- Return mutable ArrayList from RpcQueueStorage.load() to preserve original contract

Co-authored-by: aomarai <49348213+aomarai@users.noreply.github.com>